--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,3 +29,5 @@ logging:
   level:
     org.springframework: INFO
     org.hibernate: WARN
+    org.springframework.security.web.FilterChainProxy: DEBUG
+    org.springframework.security: TRACE
