Feat: 폴더 삭제 로직

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,6 +18,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+    show-sql: true
   output:
     ansi:
       enabled: ALWAYS
