--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,10 @@ server:
       enabled: true
 
 spring:
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 100MB
   application:
     name: oneBox
   datasource:
