--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,21 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	implementation 'io.minio:minio:8.6.0'
 	runtimeOnly 'org.postgresql:postgresql:42.7.8'
+	implementation 'org.apache.commons:commons-lang3:3.18.0'
 
 	compileOnly 'org.projectlombok:lombok:1.18.42'
 	annotationProcessor 'org.projectlombok:lombok:1.18.42'
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+configurations.configureEach {
+	resolutionStrategy {
+		force 'org.apache.commons:commons-lang3:3.18.0'
+	}
 }
 
 tasks.named('test') {
