--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,8 +15,8 @@ spring:
       max-file-size: 1GB
       max-request-size: 2GB
   datasource:
-#    url: jdbc:postgresql://localhost:5432/one_box
-    url: jdbc:postgresql://postgres:5432/one_box
+    url: jdbc:postgresql://localhost:5432/one_box
+#    url: jdbc:postgresql://postgres:5432/one_box
     driver-class-name: org.postgresql.Driver
     username: one_box
     password: one_box_123
@@ -34,19 +34,20 @@ storage:
 
 minio:
   port: 9000
-#  host: localhost
-  host: minio
+  host: localhost
+#  host: minio
   access-key: one_box
   secret-key: one_box_123
   bucket: one-box-bucket
 
 management:
-  endpoints.web.exposure.include: ["prometheus", "health", "metrics"]
+  endpoints.web.exposure.include: prometheus
   metrics:
     export.prometheus.enabled: true
     tags.app: oneBox
 
 logging:
   level:
-    org.springframework: INFO
-    org.hibernate: WARN
+    org:
+      springframework: INFO
+      hibernate: WARN
