--- a/build.gradle
+++ b/build.gradle
@@ -25,20 +25,27 @@ repositories {
 }
 
 dependencies {
+	// starter
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	// minio
 	implementation 'io.minio:minio:8.6.0'
+	implementation 'org.apache.commons:commons-lang3:3.18.0'
+
+	// DB
 	runtimeOnly 'org.postgresql:postgresql:42.7.8'
 
+	// lombok
 	compileOnly 'org.projectlombok:lombok:1.18.42'
 	annotationProcessor 'org.projectlombok:lombok:1.18.42'
 
-	implementation 'org.apache.commons:commons-lang3:3.18.0'
+	// metric
 	implementation 'io.micrometer:micrometer-registry-prometheus:1.15.0'
 
+	// test
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
