Test: FileData 트랜잭션 분리 실험 중

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,6 +49,6 @@ management:
 logging:
   level:
     org:
-      springframework: INFO
-#      springframework: TRACE
+#      springframework: INFO
+      springframework: TRACE
       hibernate: WARN
