--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
     environment:
       MINIO_ROOT_USER: one_box
       MINIO_ROOT_PASSWORD: one_box_123
+      MINIO_PROMETHEUS_AUTH_TYPE: public
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
