--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -4,3 +4,17 @@ scrape_configs:
     metrics_path: '/api/v1/actuator/prometheus'
     static_configs:
       - targets: ['host.docker.internal:8080']
+
+  - job_name: 'minio-cluster'
+    scrape_interval: 5s
+    metrics_path: '/minio/v2/metrics/cluster'
+    scheme: http
+    static_configs:
+      - targets: [ 'minio:9000' ]
+
+  - job_name: 'minio-node'
+    scrape_interval: 5s
+    metrics_path: '/minio/v2/metrics/node'
+    scheme: http
+    static_configs:
+      - targets: [ 'minio:9000' ]
