--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -1,20 +1,20 @@
 scrape_configs:
-  - job_name: 'spring-actuator'
+  - job_name: spring
     scrape_interval: 5s
-    metrics_path: '/api/v1/actuator/prometheus'
+    metrics_path: /api/v1/actuator/prometheus
     static_configs:
       - targets: ['host.docker.internal:8080']
 
-  - job_name: 'minio-cluster'
+  - job_name: minio-cluster
     scrape_interval: 5s
-    metrics_path: '/minio/v2/metrics/cluster'
+    metrics_path: /minio/v2/metrics/cluster
     scheme: http
     static_configs:
       - targets: [ 'minio:9000' ]
 
-  - job_name: 'minio-node'
+  - job_name: minio-node
     scrape_interval: 5s
-    metrics_path: '/minio/v2/metrics/node'
+    metrics_path: /minio/v2/metrics/node
     scheme: http
     static_configs:
       - targets: [ 'minio:9000' ]
