--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
 	// DB
 	runtimeOnly 'org.postgresql:postgresql:42.7.8'
+	implementation 'org.redisson:redisson:3.52.0'
 
 	// lombok
 	compileOnly 'org.projectlombok:lombok:1.18.42'
