Fix: 업로드 로직 수정(보상 트랜잭션 정상 작동)

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,11 +1,13 @@
 spring:
+  config:
+    import: optional:application-secret.yaml
   datasource:
     url: jdbc:postgresql://postgres:5432/one_box
     username: one_box
     password: one_box_123
 
 minio:
-  host: minio
+#  host: minio
   port: 9000
   access-key: one_box
   secret-key: one_box_123
