--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -3,8 +3,8 @@ spring:
     url: jdbc:postgresql://localhost:5432/one_box
     username: one_box
     password: one_box_123
-  jpa:
-    show-sql: true
+#  jpa:
+#    show-sql: true
   output:
     ansi:
       enabled: ALWAYS
