--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,18 +36,18 @@ services:
           cpus: "1"
           memory: 2G
 
-  redis:
-    image: redis:8.2.3
-    container_name: redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    deploy:
-      resources:
-        limits:
-          cpus: "1"
-          memory: 1G
+#  redis:
+#    image: redis:8.2.3
+#    container_name: redis
+#    ports:
+#      - "6379:6379"
+#    volumes:
+#      - redis_data:/data
+#    deploy:
+#      resources:
+#        limits:
+#          cpus: "1"
+#          memory: 1G
 
   onebox:
     image: devnovus/one-box:1.0
@@ -66,9 +66,7 @@ services:
     depends_on:
       - postgres
       - minio
-      - redis
 
 volumes:
   postgres_data:
   minio_data:
-  redis_data:
